@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
+<form string="Create Payments">
+    <image name="tryton-dialog-information" xexpand="0" xfill="0"/>
+    <label string="Payments will be created for selected lines" id="create" yalign="0.0" xalign="0.0" xexpand="1"/>
+    <newline/>
+</form>
