@@ -3,6 +3,7 @@ from trytond.pool import Pool
 from .payment import *
 from .configuration import *
 from .offered import *
+from .move import *
 
 
 def register():
@@ -13,4 +14,5 @@ def register():
         Product,
         JournalFailureAction,
         BillingMode,
+        MoveLine,
         module='contract_insurance_payment', type_='model')
